tests/cases/parser/misc/double_hash.stderr
error: expected a name here
 --> $DIR/double_hash.hash:3:7
2 |   
3 |   k := ##naughty_intrinsic();
  |         ^ 
